add dependencies for calendar api

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-.classpath
-.project
-.settings
-.vscode
-target/
-.idea
-node_modules/
-package-lock.json
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
