--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       <version>v3-rev305-1.23.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-1.0-sdk</artifactId>
+      <version>1.9.59</version>
+    </dependency>
+
   </dependencies>
 
   <build>
