--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>handleUserInput</servlet-name>
+    <servlet-class>com.google.sps.server.ScheduleCreationHandler</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>handleUserInput</servlet-name>
+    <url-pattern>/handleUserInput</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>handleSchedules</servlet-name>
     <servlet-class>com.google.sps.server.ScheduleDisplayHandler</servlet-class>
   </servlet>
