--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/react": "^5.1.0",
+    "@fullcalendar/timegrid": "^5.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "fullcalendar": "^5.1.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "deploy": "react-scripts build && rm -rf ../src/main/webapp/* && cp -r ./build/* ../src/main/webapp && cd .. && mvn package appengine:deploy",
     "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
