--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "start": " PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-fix": "npx eslint --fix ./"
   },
   "eslintConfig": {
     "extends": "react-app"
