--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint-fix": "npx eslint --fix ./"
+    "lint-fix": "eslint --fix ./"
   },
   "eslintConfig": {
     "extends": "react-app"
