Update indent lenght to 2

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,6 +22,7 @@
       "max-len": [
         "warn", {"code": 90}
       ],
+      "indent": ["error", 2],
       "react/prop-types": "off" 
     }
 }
