--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <version>1.9.59</version>
     </dependency>
 
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
