--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint-fix": "eslint --fix ./"
+    "lint-fix": "eslint --fix ./src/"
   },
   "eslintConfig": {
     "extends": "react-app"
